--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,11 +3,13 @@
   "short_name": "אייזנהאואר",
   "description": "ניהול משימות חכם עם מטריצת אייזנהאואר",
   "start_url": "/",
-  "display": "browser",
+  "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
   "orientation": "portrait-primary",
   "dir": "rtl",
-  "lang": "he"
+  "lang": "he",
+  "scope": "/",
+  "prefer_related_applications": false
 }
 
