Fix: Use negative lookahead regex to exclude static files from rewrite

--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/manifest.json",
-      "destination": "/manifest.json"
-    },
-    {
-      "source": "/icon.svg",
-      "destination": "/icon.svg"
-    },
-    {
-      "source": "/icon-192.png",
-      "destination": "/icon-192.png"
-    },
-    {
-      "source": "/icon-512.png",
-      "destination": "/icon-512.png"
-    },
-    {
-      "source": "/favicon.svg",
-      "destination": "/favicon.svg"
-    },
-    {
-      "source": "/sw.js",
-      "destination": "/sw.js"
-    },
-    {
-      "source": "/(.*)",
+      "source": "/((?!manifest\\.json|icon\\.svg|icon-192\\.png|icon-512\\.png|favicon\\.svg|sw\\.js|_next|assets).*)",
       "destination": "/index.html"
     }
   ],
