--- a/package.json
+++ b/package.json
@@ -10,27 +10,25 @@
     "generate-icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "@supabase/supabase-js": "^2.38.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@supabase/supabase-js": "^2.38.0",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "framer-motion": "^10.16.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
-    "xlsx": "^0.18.5",
-    "date-fns": "^2.30.0",
-    "date-fns-tz": "^2.0.0",
-    "react-hot-toast": "^2.4.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.20.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "vite": "^5.0.0",
-    "vite-plugin-pwa": "^0.17.0"
+    "vite": "^5.0.0"
   }
 }
-
